Docs about React et Ant Design

--- a/index.html
+++ b/index.html
@@ -782,22 +782,33 @@ Avec Vulcan 3 la stratégie commerciale a changé. Le payement d&#8217;un abonne
 <div class="sect1">
 <h2 id="truespécifications-techniques-du-projet-élaborées-par-le-candidat-y-compris-pour-la-sécurité"><a class="anchor" href="#truespécifications-techniques-du-projet-élaborées-par-le-candidat-y-compris-pour-la-sécurité"></a>6. Spécifications techniques du projet, élaborées par le candidat, y compris pour la sécurité</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p>J&#8217;ai débuté mon activité chez Mimbus effectuant une campagne de test fonctionnel. Cela m&#8217;a permis de commencer à comprendre les fonctionnements de Vulcan. Un exemple de test était d&#8217;envoyer une invitation à un nouvel élève avec le rôle de formateur. La procédure était détaillée et je devais signaler si le logiciel répondait comme attendu et noter les dysfonctionnements.<br>
+Autre chose qui m&#8217;a permis de découvrir le métier de Mimbus, mon premier jour de stage, était d&#8217;effectuer un exercice avec le simulateur SimSpray qui permet de s&#8217;entraîner à peindre la carrosserie d&#8217;une voiture. Cette fois,  je me suis mise à la place d&#8217;un utilisateur avec un rôle d&#8217;apprentie.<br></p>
+</div>
+<div class="paragraph">
+<p><span class="image"><img src="./image/antReact.png" alt="antReact"></span></p>
+</div>
+<div class="paragraph">
+<p>Le front-end de Vulcan 3 allait changer peu par rapport à Vulcan 2 au niveau de design. La première version utilisé la librairie Art Design dans son ancienne version. Dans la nouvelle version de Vulcan on devait utiliser les composants mis à jour dans la dernière version.<br></p>
+</div>
+<div class="paragraph">
+<p><span class="image"><img src="./image/antDesign.png" alt="antDesign"></span></p>
+</div>
+<div class="paragraph">
+<p>Par contre, pour évoluers à la paire du back-end la question de l&#8217;utilisation de dernières technologies React a été lancé. Devions-nous utiliser les hooks de React ? <br>
+Les hooks de React sont apparus dans la version 16.7.0 alpha et sont des fonctions qui permettent d’utiliser toutes les fonctionnalités des classes React dans des composants fonctionnels. On peut grâce aux hooks développer une application React uniquement faite des composants fonctionnels.<br></p>
+</div>
 <div class="ulist">
 <ul>
 <li>
-<p>test fonctionnels</p>
+<p>Front-end: JS6 React Redux et Art Design // Visual Studio Code // Postman (mock)</p>
 </li>
 <li>
-<p>étude hooks</p>
+<p>Back-end : travail dto // Visual Studio // Java vers C#</p>
 </li>
 <li>
-<p>travail front: organizations</p>
-</li>
-<li>
-<p>travail back dto</p>
-</li>
-<li>
-<p>etude plugins</p>
+<p>etude plugins : Uml</p>
 </li>
 </ul>
 </div>
@@ -854,7 +865,7 @@ Avec Vulcan 3 la stratégie commerciale a changé. Le payement d&#8217;un abonne
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-17 10:27:45 +0100
+Last updated 2021-12-17 17:36:32 +0100
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/styles/github.min.css">
